# AutoInsights

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATABASE_SETUP.md  Dockerfile  LICENSE  MANIFEST.in  PORTFOLIO.md  README.md  SECURITY.md  app.py  check_dashboard_data.py  check_db.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: ci.yml
Frontend/: backend_api.py  streamlit_frontend.py
pages/: dashboard.py
processor/: churn_model.py  clean_and_merge.py  revenue_model.py
scripts/: database_setup.py  database_utils.py  generate_secrets.py  init.sql  sql_upload.py
scripts/database_utils.py, scripts/sql_upload.py, processor/: clean_and_merge.py
template/: AutoBI Template.pbix
tests/: __init__.py  test_churn_model.py
utils/: __init__.py  config.py  logger.py
